--- a/SCI.Modules.Category/Views/CategoryView.xaml
+++ b/SCI.Modules.Category/Views/CategoryView.xaml
@@ -4,10 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Triggers>
+             xmlns:system="clr-namespace:System;assembly=mscorlib">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.TextBlock.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <!--<UserControl.Triggers>
         <EventTrigger RoutedEvent="Loaded">
             <BeginStoryboard>
                 <Storyboard>
@@ -15,7 +21,7 @@
                 </Storyboard>
             </BeginStoryboard>
         </EventTrigger>
-    </UserControl.Triggers>
+    </UserControl.Triggers>-->
     <Grid>
         <materialDesign:DialogHost HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsOpen="{Binding MostrarPrimerDialogo}" DialogContent="{Binding ContenidoPrimerDialogo}" CloseOnClickAway="True">
             <Grid>
@@ -23,44 +29,88 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <materialDesign:Card Padding="32" Margin="16">
+                <!--<materialDesign:Card Padding="32" Margin="16">
                     <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}" TextAlignment="Center">Listado de Categorias</TextBlock>
-                </materialDesign:Card>
-                <materialDesign:Card Padding="32" Margin="16, 70, 16, 16" >
-                    <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
-                        <StackPanel>
-                            <DataGrid SelectedItem="{Binding CategoriaSeleccionada}" ItemsSource="{Binding ListadoDeCategorias}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" ScrollViewer.CanContentScroll="True">
+                </materialDesign:Card>-->
+                
+                <materialDesign:Card Margin="0, 0, 0, 0" >
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <materialDesign:TransitioningContent Grid.Row="0" OpeningEffect="{materialDesign:TransitionEffect SlideInFromRight, Duration=0:0:1.2}">
+                            <materialDesign:ColorZone Mode="PrimaryMid" materialDesign:ShadowAssist.ShadowDepth="Depth3">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <StackPanel Grid.Column="0" Margin="16" Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="Database" Height="32" Width="32" />
+                                        <TextBlock Style="{DynamicResource MaterialDesignHeadlineTextBlock}" Margin="16 0 16 0">Listado de Categorias</TextBlock>
+                                    </StackPanel>
+                                    <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                        <Border Background="White" MaxHeight="30" CornerRadius="3" ToolTip="Nombre para buscar" Margin="0 0 2 0">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="Auto" />
+                                                    <ColumnDefinition Width="*" />
+                                                </Grid.ColumnDefinitions>
+                                                <Button Style="{DynamicResource MaterialDesignToolButton}" Command="{Binding SearchCommand}" x:Name="SearchButton" CommandParameter="{Binding ElementName=SearchBox, Path=Text}" Height="24" Width="24">
+                                                    <materialDesign:PackIcon Kind="Magnify" Opacity=".56" />
+                                                </Button>
+                                                <TextBox Foreground="Black" Grid.Column="1" Margin="5 0 0 0" materialDesign:HintAssist.Hint="Buscar" x:Name="SearchBox" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" BorderThickness="0" MinWidth="200" VerticalAlignment="Center" />
+                                            </Grid>
+                                        </Border>
+
+
+                                        <!--<Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="10 0 10 0" HorizontalAlignment="Left" ToolTip="Imprimir">-->
+                                        <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}" Margin="10 0 10 0" HorizontalAlignment="Left" ToolTip="Imprimir">
+                                            <materialDesign:PackIcon Kind="Printer" Height="24" Width="24" />
+                                        </Button>
+
+                                    </StackPanel>
+                                    
+
+                                </Grid>
+                            </materialDesign:ColorZone>
+                        </materialDesign:TransitioningContent>
+                        <DataGrid Padding="20" Grid.Row="1" SelectedItem="{Binding CategoriaSeleccionada}" ItemsSource="{Binding ListadoDeCategorias}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" ScrollViewer.CanContentScroll="True">
+                            
                                 <DataGrid.Columns>
-                                    <DataGridTextColumn Header="#" Binding="{Binding IdCategoria}"/>
+                                    
+                                        <DataGridTextColumn Header="#" Binding="{Binding IdCategoria}"/>
                                     <DataGridTextColumn Header="Nombre" Binding="{Binding Nombre}" />
                                     <DataGridTextColumn Header="Descripcion" Binding="{Binding Descripcion}" />
                                     <DataGridTemplateColumn Header="Acciones">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <StackPanel Orientation="Horizontal">
-                                                    <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.EditCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Editar">
-                                                        <materialDesign:PackIcon Kind="Pencil" Height="15" Width="15" />
-                                                    </Button>
-                                                    <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar">
-                                                        <materialDesign:PackIcon Kind="Delete" Height="15" Width="15" />
-                                                    </Button>
-                                                </StackPanel>
+                                                <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect ExpandIn}">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.EditCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Editar">
+                                                            <materialDesign:PackIcon Kind="Pencil" Height="15" Width="15" />
+                                                        </Button>
+                                                        <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}" Margin="0 0 8 0" HorizontalAlignment="Left" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" ToolTip="Eliminar">
+                                                            <materialDesign:PackIcon Kind="Delete" Height="15" Width="15" />
+                                                        </Button>
+                                                    </StackPanel>
+                                                </materialDesign:TransitioningContent>
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
                                 </DataGrid.Columns>
-                            </DataGrid>
-                        </StackPanel>
-                    </ScrollViewer>
+                            
+                        </DataGrid>
+                    </Grid>
+                    
                 </materialDesign:Card>
 
                 <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
                     <TextBlock Margin="16"></TextBlock>
                 </materialDesign:ColorZone>
-                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" 
-                    Command="{Binding AddCommand}"
-                                    VerticalAlignment="Bottom" HorizontalAlignment="Right" 
-                                    Grid.Row="0" Margin="0 0 28 -20" ToolTip="Agregar Categoria">
+                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="0" Margin="0 0 28 -20" 
+                        ToolTip="Agregar Categoria" Command="{Binding AddCommand}" >
                     <Viewbox Width="22" Height="22">
                         <Canvas Width="24" Height="24">
                             <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Button}, Path=Foreground}" />
