Normalización(2) / Cambio en Mantenimientos (En Proceso)

--- a/SCI.WPF.Shell/MainWindow.xaml
+++ b/SCI.WPF.Shell/MainWindow.xaml
@@ -5,4 +5,4 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:myLoginControl="clr-namespace:SCI.Modules.UserLogin.Views;assembly=SCI.Modules.UserLogin"
-        Title="SCI - Dynamics" WindowState="Maximized"/>
+        Title="SCI - Dynamics Progressive Systems" WindowState="Maximized"/>
