--- a/SCI.Modules.Category/Views/CrudCategoryView.xaml
+++ b/SCI.Modules.Category/Views/CrudCategoryView.xaml
@@ -3,36 +3,50 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:domain="clr-namespace:SCI.BusinessObjects.Domain;assembly=SCI.BusinessObjects"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <materialDesign:ColorZone Mode="PrimaryMid" Height="80" Effect="{DynamicResource MaterialDesignShadowDepth5}" Grid.Row="0">
-            <StackPanel Orientation="Horizontal">
-                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Margin="10, 15, 20, 25" Command="{Binding CancelCommand}" HorizontalAlignment="Left" ToolTip="Atras">
-                    <materialDesign:PackIcon Kind="ArrowLeft" Height="20" Width="20" />
-                </Button>
-                <TextBlock Margin="15" Padding="10" Width="200" Text="{Binding TituloCrud}" TextAlignment="Center" FontSize="17"/>
-            </StackPanel>
-        </materialDesign:ColorZone>
-        <StackPanel Grid.Row="1">
-            <Label Margin="0, 25, 0, 10" IsEnabled="{Binding Habilitado}" Content="Nombre: "/>
-            <TextBox Margin="15 0 4 0" IsEnabled="{Binding Habilitado}" materialDesign:HintAssist.Hint="Nombre" Text="{Binding Nombre}"/>
-            <Label Margin="0 10 0 10" IsEnabled="{Binding Habilitado}" Content="Descripción: "/>
-            <TextBox Margin="15 0 4 0" IsEnabled="{Binding Habilitado}" materialDesign:HintAssist.Hint="Descripcion" Text="{Binding Descripcion}"/>
-            <Label Margin="0 10 0 10" Visibility="{Binding VisibleEliminar}" Content="¿Desea Eliminar el Registro?" FontFamily="Open Sans" FontSize="13" HorizontalContentAlignment="Center"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
-                <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 8 8 0" Command="{Binding CancelCommand}" Content="{Binding TituloBotonCancelar}"/>
-                <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 8 8 0" Command="{Binding AcceptCommand}" Content="{Binding TituloBotonEjecutar}"/>
-            </StackPanel>
-            <TextBlock Height="17">
+        <materialDesign:DialogHost DialogContent="{Binding ContenidoSegundoDialogo}" IsOpen="{Binding MostrarSegundoDialogo}" CloseOnClickAway="True" Grid.Row="0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <materialDesign:ColorZone Mode="PrimaryMid" Height="80" Effect="{DynamicResource MaterialDesignShadowDepth5}" Grid.Row="0">
+                    <StackPanel Orientation="Horizontal">
+                        <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Margin="10, 15, 20, 25" Command="{Binding CancelCommand}" HorizontalAlignment="Left" ToolTip="Atras">
+                            <materialDesign:PackIcon Kind="ArrowLeft" Height="20" Width="20" />
+                        </Button>
+                        <TextBlock Margin="15" Padding="10" Width="200" Text="{Binding TituloCrud}" TextAlignment="Center" FontSize="17"/>
+                    </StackPanel>
+                </materialDesign:ColorZone>
+                <StackPanel Grid.Row="1">
+                    <Label Margin="0, 25, 0, 10" IsEnabled="{Binding Habilitado}" Content="Nombre: "/>
+                    <TextBox Margin="15 0 4 0" IsEnabled="{Binding Habilitado}" materialDesign:HintAssist.Hint="Nombre">
+                        <TextBox.Text>
+                            <Binding Path="Nombre" UpdateSourceTrigger="PropertyChanged">
+                                <Binding.ValidationRules>
+                                    <domain:NotEmptyValidationRule ValidatesOnTargetUpdated="True"/>
+                                </Binding.ValidationRules>
+                            </Binding>
+                        </TextBox.Text>
+                    </TextBox>
+                    <Label Margin="0 10 0 10" IsEnabled="{Binding Habilitado}" Content="Descripción: "/>
+                    <TextBox Margin="15 0 4 0" IsEnabled="{Binding Habilitado}" materialDesign:HintAssist.Hint="Descripcion" Text="{Binding Descripcion}"/>
+                    <Label Margin="0 10 0 10" Visibility="{Binding VisibleEliminar}" Content="¿Desea Eliminar el Registro?" FontFamily="Open Sans" FontSize="13" HorizontalContentAlignment="Center"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
+                        <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 8 8 0" Command="{Binding CancelCommand}" Content="{Binding TituloBotonCancelar}"/>
+                        <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 8 8 0" Command="{Binding AcceptCommand}" Content="{Binding TituloBotonEjecutar}"/>
+                    </StackPanel>
+                    <TextBlock Height="17">
 
-            </TextBlock>
-        </StackPanel>
+                    </TextBlock>
+                </StackPanel>
+
+            </Grid>
+        </materialDesign:DialogHost>
 
     </Grid>
 </UserControl>
