--- a/SCI.Modules.Category/Views/CrudCategoryView.xaml
+++ b/SCI.Modules.Category/Views/CrudCategoryView.xaml
@@ -19,12 +19,12 @@
                         <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Margin="10, 15, 20, 25" Command="{Binding CancelCommand}" HorizontalAlignment="Left" ToolTip="Atras">
                             <materialDesign:PackIcon Kind="ArrowLeft" Height="20" Width="20" />
                         </Button>
-                        <TextBlock Margin="15" Padding="10" Width="200" Text="{Binding TituloCrud}" TextAlignment="Center" FontSize="17"/>
+                        <TextBlock Margin="15" Padding="10" Width="200" Text="{Binding MaintanceTitle}" TextAlignment="Center" FontSize="17"/>
                     </StackPanel>
                 </materialDesign:ColorZone>
                 <StackPanel Grid.Row="1">
-                    <Label Margin="0, 25, 0, 10" IsEnabled="{Binding Habilitado}" Content="Nombre: "/>
-                    <TextBox Margin="15 0 4 0" IsEnabled="{Binding Habilitado}" materialDesign:HintAssist.Hint="Nombre">
+                    <Label Margin="0, 25, 0, 10" IsEnabled="{Binding EnableEdit}" Content="Nombre: "/>
+                    <TextBox Margin="15 0 4 0" IsEnabled="{Binding EnableEdit}" materialDesign:HintAssist.Hint="Nombre">
                         <TextBox.Text>
                             <Binding Path="Nombre" UpdateSourceTrigger="PropertyChanged">
                                 <Binding.ValidationRules>
@@ -33,12 +33,12 @@
                             </Binding>
                         </TextBox.Text>
                     </TextBox>
-                    <Label Margin="0 10 0 10" IsEnabled="{Binding Habilitado}" Content="Descripción: "/>
-                    <TextBox Margin="15 0 4 0" IsEnabled="{Binding Habilitado}" materialDesign:HintAssist.Hint="Descripcion" Text="{Binding Descripcion}"/>
-                    <Label Margin="0 10 0 10" Visibility="{Binding VisibleEliminar}" Content="¿Desea Eliminar el Registro?" FontFamily="Open Sans" FontSize="13" HorizontalContentAlignment="Center"/>
+                    <Label Margin="0 10 0 10" IsEnabled="{Binding EnableEdit}" Content="Descripción: "/>
+                    <TextBox Margin="15 0 4 0" IsEnabled="{Binding EnableEdit}" materialDesign:HintAssist.Hint="Descripcion" Text="{Binding Descripcion}"/>
+                    <Label Margin="0 10 0 10" Visibility="{Binding VisibleDelete}" Content="¿Desea Eliminar el Registro?" FontFamily="Open Sans" FontSize="13" HorizontalContentAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
-                        <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 8 8 0" Command="{Binding CancelCommand}" Content="{Binding TituloBotonCancelar}"/>
-                        <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 8 8 0" Command="{Binding AcceptCommand}" Content="{Binding TituloBotonEjecutar}"/>
+                        <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="0 8 8 0" Command="{Binding CancelCommand}" Content="{Binding CancelButtonTitle}"/>
+                        <Button Style="{StaticResource MaterialDesignRaisedButton}" Margin="0 8 8 0" Command="{Binding AcceptCommand}" Content="{Binding ExecuteButtonTitle}"/>
                     </StackPanel>
                     <TextBlock Height="17">
 
