--- a/SCI.Modules.Dashboard/Views/DashboardView.xaml
+++ b/SCI.Modules.Dashboard/Views/DashboardView.xaml
@@ -62,7 +62,7 @@
                 <materialDesign:ColorZone Mode="PrimaryMid" materialDesign:ShadowAssist.ShadowDepth="Depth3" Margin="4">
                     <StackPanel Margin="16" Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Account" Height="32" Width="32" />
-                        <TextBlock Style="{DynamicResource MaterialDesignHeadlineTextBlock}" Margin="16 0 0 0">Contacts</TextBlock>
+                        <TextBlock Style="{DynamicResource MaterialDesignHeadlineTextBlock}" Margin="16 0 0 0">Inicio</TextBlock>
                     </StackPanel>
                 </materialDesign:ColorZone>
             </materialDesign:TransitioningContent>
