--- a/SCI.BusinessObjects/ViewHelpers/Views/ConfirmDialogView.xaml
+++ b/SCI.BusinessObjects/ViewHelpers/Views/ConfirmDialogView.xaml
@@ -2,10 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid Margin="16">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock Text="{Binding Title}" Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="0 6 0 0" FontSize="18" Grid.Row="0"/>
+            <TextBlock Grid.Row="1" Margin="0 4 0 4">
+                <Hyperlink IsEnabled="False" Style="{StaticResource MaterialDesignBody1Hyperlink}">
+                    <TextBlock Text="{Binding Content}"/>
+                </Hyperlink>
+            </TextBlock>
+            <Border Margin="0 16 0 0" BorderThickness="0 1 0 0" BorderBrush="{DynamicResource MaterialDesignDivider}" Grid.Row="2" />
+            <Button Grid.Row="3" Content="{Binding ButtonContent}" IsDefault="True" Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Center" Margin="16 16 16 0" Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+        </Grid>
     </Grid>
 </UserControl>
