--- a/SCI.Modules.Category/Views/CrudCategoryView.xaml
+++ b/SCI.Modules.Category/Views/CrudCategoryView.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <materialDesign:DialogHost DialogContent="{Binding ContenidoSegundoDialogo}" IsOpen="{Binding MostrarSegundoDialogo}" CloseOnClickAway="True" Grid.Row="0">
+        <materialDesign:DialogHost DialogContent="{Binding SecondDialogContent}" IsOpen="{Binding ShowSecondDialog}" CloseOnClickAway="True" Grid.Row="0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
