--- a/SCI.Modules.Employee/Views/CrudEmployeeView.xaml
+++ b/SCI.Modules.Employee/Views/CrudEmployeeView.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d">
     <Grid>
-        <materialDesign:DialogHost DialogContent="{Binding SecondDialogContent}" IsOpen="{Binding ShowSecondDialog}" CloseOnClickAway="True" >
+        <materialDesign:DialogHost Command=""  DialogContent="{Binding SecondDialogContent}" IsOpen="{Binding ShowSecondDialog}" CloseOnClickAway="True" Initialized="DialogHost_Initialized" >
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
